changed ip again

--- a/bin/nginx.conf
+++ b/bin/nginx.conf
@@ -9,7 +9,7 @@ http {
             try_files $uri $uri/ /;
         }
 	location /proBook {
-		proxy_pass http://172.18.0.3:8089;	
+		proxy_pass http://spring-boot-probook:8089;	
 	}
     }
 }
