chnaged nginx.conf

--- a/bin/nginx.conf
+++ b/bin/nginx.conf
@@ -1,15 +1,12 @@
+
 events {}
 http {
-    server {
-        listen 80;
-        root /opt/proBook-front-end;
-        index index.html;
-        include /etc/nginx/mime.types;
-        location / {
-            try_files $uri $uri/ /;
+        server {
+                listen 80 default_server;
+                root /var/www;
+                index index.html index.html;
+                location / {
+                       include /etc/nginx/mime.types;
+                }
         }
-	location /proBook {
-		proxy_pass http://http://3.10.181.143:8089;	
-	}
-    }
 }
