--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,15 @@
-
 events {}
 http {
-        server {
-                listen 80 default_server;
-                root /var/www;
-                index index.html index.html;
-                location / {
-                       include /etc/nginx/mime.types;
-                }
+    server {
+        listen 80;
+        root /opt/proBook-front-end;
+        index index.html;
+        include /etc/nginx/mime.types;
+        location / {
+            try_files $uri $uri/ /;
         }
+	location /proBook {
+		proxy_pass http://http://3.10.181.143:8089;	
+	}
+    }
 }
